Added more content to the site Downloaded some Images

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body{
     text-align: center;
     background-color: skyblue;
     font-family: 'Merriweather', serif;
+}
 h1{
     margin: 0 auto 0 auto;
     font-family: 'Sacramento', cursive;
