--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,16 @@ body{
     margin: 0;
     text-align: center;
     background-color: skyblue;
-    font-family: 'Merriweather', serif;
+    font-family: 'Monteserrat', serif;
+    /* font-size: 200%; */
 }
 h1{
-    margin: 0 auto 0 auto;
+    font-size: 5.625rem;
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
 }
 h2{
+    font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
 }
 h3{
@@ -22,9 +25,9 @@ div{
     text-align: center;
     display: inline-block;
 }
-img{
-   
-}
+/* img{
+    */
+/* } */
 span{
     text-decoration: underline;
 }
@@ -35,8 +38,8 @@ span{
 }
 .top-cloud{
     position: absolute;
-    left : 620px;
-    bottom:750px;
+    left : 790px;
+    bottom:970px;
     max-width: 15%;
     max-height:15%;
 }
