--- a/css/styles.css
+++ b/css/styles.css
@@ -2,20 +2,25 @@
 body{
     margin: 0;
     text-align: center;
-    background-color: skyblue;
-    font-family: 'Monteserrat', serif;
+    background-color: #e4f9f5;
+    font-family: 'Merriweather', serif;
+    font-weight: 600;
     /* font-size: 200%; */
 }
 h1{
+    color: #66bfbf;
     font-size: 5.625rem;
     margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
 }
 h2{
+    font-weight: normal;
+    color: #66bfbf;
     font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
 }
 h3{
+    color: #11999e;
     font-family: 'Montserrat', sans-serif;
 }
 p{
@@ -23,7 +28,7 @@ p{
 }
 div{
     text-align: center;
-    display: inline-block;
+    /* display: inline-block; */
 }
 /* img{
     */
@@ -36,10 +41,27 @@ span{
     padding-top: 100px;
    
 }
+.skill-row{
+
+    line-height: 2;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    width:50%;
+}
+.skill1{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+.skill2{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
 .top-cloud{
-    position: absolute;
-    left : 790px;
-    bottom:970px;
+    position: relative;
+    left : 338px;
+    top:54px;
     max-width: 15%;
     max-height:15%;
 }
