--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,54 @@
 body{
     margin: 0;
     text-align: center;
-    background-color: #e4f9f5;
     font-family: 'Merriweather', serif;
     font-weight: 600;
-    /* font-size: 200%; */
+    
 }
+hr{
+    
+    border: 10px dotted #EAF6F6;
+    border-style: none none dotted;
+    width:5%;
+    color:#EAF6F6;
+}
+.BUTTON_ZCQ {
+    background: #18DCE3;
+    background-image: -webkit-linear-gradient(top, #18DCE3, #11999E);
+    background-image: -moz-linear-gradient(top, #18DCE3, #11999E);
+    background-image: -ms-linear-gradient(top, #18DCE3, #11999E);
+    background-image: -o-linear-gradient(top, #18DCE3, #11999E);
+    background-image: -webkit-gradient(to bottom, #18DCE3, #11999E);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    color: #FFFFFF;
+    width: 150px;
+    height: 0px;
+    font-size: 22px;
+    font-weight: 100;
+    margin: 50px 0 20px 0;
+    padding: 20px 40px 40px 40px;
+    border: solid #11999E 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+ 
+ .BUTTON_ZCQ:hover {
+    border: solid #0a5659 1px;
+    background: #1E62D0;
+    background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
+    background-image: -webkit-gradient(to bottom, #1E62D0, #3D94F6);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+ }
 h1{
     color: #66bfbf;
     font-size: 5.625rem;
@@ -28,18 +71,48 @@ p{
 }
 div{
     text-align: center;
-    /* display: inline-block; */
 }
-/* img{
-    */
-/* } */
+
 span{
     text-decoration: underline;
 }
+.profile-pic{
+    text-align: center;
+    margin-top: 100px;
+}
 .top-container{
+    background-color: #e4f9f5;
     position: relative;
     padding-top: 100px;
    
+}
+.bottom-container{
+    margin-top: 100px;
+    background-color: #66BFBF;
+    height: 150px;
+    display: block;
+}
+.footer-link{
+    color: #11999E;
+    position: relative;
+    font-weight: bold;
+    text-decoration: none;
+    top: 30px;
+    padding: 30px;
+}
+.footer-link2{
+    color: #11999E;
+    font-weight: bold;
+    text-decoration: none;
+    position: relative;
+    top: 30px;
+    padding: 30px;
+}
+.bottom-line{
+    color: white;
+    font-weight: normal;
+    position: relative;
+    top:60px;
 }
 .skill-row{
 
@@ -60,22 +133,23 @@ span{
 }
 .top-cloud{
     position: relative;
-    left : 338px;
-    top:54px;
+    left : 491px;
+    top:14px;
     max-width: 15%;
     max-height:15%;
 }
   
 .bottom-cloud{
-    position: absolute;
+    position: relative;
+    bottom: 326px;
+    right: 160px;
     max-width:15%;
     max-height: 15%;
 }
 .mountain{
     position: relative;
-    bottom: 50px;
-    max-width: 70%;
-    max-height: 70%;
+    width: 45%;
+    max-height: 45%;
 }
 
 
