--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,8 @@ hr{
     -moz-border-radius: 20px;
     border-radius: 20px;
     text-decoration: none;
- }#0c6c7059
+ }
+ h1{
     color: #66bfbf;
     font-size: 5.625rem;
     margin: 50px auto 0 auto;
